--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,40 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  font-size: 16px;
+  background-color: #ffffff;
+  color: #0f0f0e;
 }
+
+h1{
+  font-size: 2.75em;
+  line-height: 1.5em;
+}
+
+figcaption{
+  font-size: .8em;
+  line-height: 2.5em;
+}
+
+h3{
+  font-size: 1.3em;
+  line-height: 1.1em;
+}
+
+p{
+  font-size: 1em;
+  line-height: 1.5em;
+}
+
+a{
+  text-decoration: none;
+}
+
+a:link{
+  color:#1839e0;
+}
+a:hover{
+  color:#d60c42;
+}
+
 
 nav {
   background-color: rgba(0,0,0,.5);
