--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,15 @@ body {
   font-size: 16px;
   background-color: #ffffff;
   color: #0f0f0e;
+  font-family: sans-serif;
 }
 
 h1{
   font-size: 2.75em;
+  font-weight: bold;
   line-height: 1.5em;
+  margin-bottom: 8px;
+
 }
 
 figcaption{
@@ -16,23 +20,29 @@ figcaption{
 
 h3{
   font-size: 1.3em;
+  font-weight: 950px;
   line-height: 1.1em;
+  margin-bottom: 20px;
 }
 
 p{
   font-size: 1em;
   line-height: 1.5em;
+  display: block;
+  max-width: 640px;
+  margin-bottom: 20px;
 }
 
 a{
   text-decoration: none;
 }
 
-a:link{
-  color:#1839e0;
+a{
+  color: #ffffff;
 }
-a:hover{
-  color:#d60c42;
+
+a:hover {
+  color:#f49842;
 }
 
 
